# mapcat

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: pypi.yml  pytest.yml
alembic/: env.py
alembic/versions/: 78293df04081_create_depth_1_map_table.py
mapcat/: __init__.py  alembic.ini  database.py  helper.py
mapcat/alembic/: env.py
mapcat/alembic/versions/: 1195d17201ba_add_notes_missing_field_to_atomic_maps.py  26c6d65f3f3f_pointing_residual_offsets_json.py  46575bc0d660_remove_requirement_for_intensity_map_.py  57b97937e1bc_.py  6ce7e94dfd2d_add_filtered_masps.py  78293df04081_create_depth_1_map_table.py  89c08999f573_add_pointing_residual_rms_columns.py  976527c198bd_add_indices.py  a1b2c3d4e5f6_add_residual_stats_to_pointing_residuals.py  bc2be980cfe7_add_notes_json_field_to_depth_one_maps.py  cd9bc4ba5bc0_change_pointing_model_to_pydantic_model.py  fd6670a1fdbe_update_atomic_map_coadd_table.py
mapcat/client/: core.py
mapcat/core/: __init__.py  core.py
mapcat/database/: __init__.py  atomic_coadd.py  atomic_map.py  depth_one_coadd.py  depth_one_map.py  json.py  links.py  pipeline_information.py  pointing_residual.py  processing_status.py  sky_coverage.py  time_domain_processing.py  tod.py  tools.py
mapcat/pointing/: base.py  const.py  poly.py
mapcat/toolkit/: act.py  mapmaking.py  plot_tiles.py  reset.py  update_sky_coverage.py
tests/: conftest.py  test_act.py  test_mapcat.py  test_mapmaking.py  test_pointing.py  test_reset.py
