[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mapcat = ["alembic/*", "alembic.ini", "alembic/versions/*"]

[project]
name = "mapcat"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "alembic",
    "pydantic_settings",
    "pixell",
    "h5py"
]

[project.scripts]
actingest = "mapcat.toolkit.act:main"
mapcatmigrate = "mapcat.helper:migrate"
mapcatreset = "mapcat.toolkit.reset:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "testcontainers",
    "coverage",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
    "gevent"
]

[tool.ruff.lint]
preview = true
extend-select = ["I", "DOC501"]
# ignore = ["D417", "D400", "D200", "D103", "D102", "D101", "D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "mapcat"
]
concurrency = ["gevent", "thread"]
